more fields and document types in bibtex syntax highlighting

--- a/resources/gtksourceview/language-specs/bibtex.lang
+++ b/resources/gtksourceview/language-specs/bibtex.lang
@@ -43,59 +43,100 @@
 
       <keyword>article</keyword>
       <keyword>book</keyword>
-      <keyword>booklet</keyword>
-      <keyword>conference</keyword>
+      <keyword>mvbook</keyword>
       <keyword>inbook</keyword>
+      <keyword>bookinbook</keyword>
+      <keyword>suppbook</keyword>
+      <keyword>booklet</keyword>
+      <keyword>collection</keyword>
+      <keyword>mvcollection</keyword>
       <keyword>incollection</keyword>
-      <keyword>inproceedings</keyword>
-      <keyword>lambda</keyword>
+      <keyword>suppcollection</keyword>
+      <keyword>dataset</keyword>
       <keyword>manual</keyword>
-      <keyword>mastersthesis</keyword>
       <keyword>misc</keyword>
       <keyword>online</keyword>
-      <keyword>phdthesis</keyword>
+      <keyword>patent</keyword>
+      <keyword>periodical</keyword>
+      <keyword>suppperiodical</keyword>
       <keyword>proceedings</keyword>
+      <keyword>mvproceedings</keyword>
+      <keyword>inproceedings</keyword>
+      <keyword>reference</keyword>
+      <keyword>mvreference</keyword>
+      <keyword>inreference</keyword>
       <keyword>report</keyword>
-      <keyword>techreport</keyword>
+      <keyword>software</keyword>
+      <keyword>thesis</keyword>
       <keyword>unpublished</keyword>
     </context>
 
     <context id="field" style-ref="field" class="no-spell-check">
-      <keyword>address</keyword>
       <keyword>author</keyword>
-      <keyword>booktitle</keyword>
-      <keyword>chapter</keyword>
-      <keyword>crossref</keyword>
-      <keyword>doi</keyword>
-      <keyword>edition</keyword>
-      <keyword>editor</keyword>
-      <keyword>eprint</keyword>
-      <keyword>eprinttype</keyword>
-      <keyword>howpublished</keyword>
-      <keyword>institution</keyword>
-      <keyword>isbn</keyword>
-      <keyword>issn</keyword>
-      <keyword>journal</keyword>
-      <keyword>key</keyword>
-      <keyword>keywords</keyword>
-      <keyword>language</keyword>
-      <keyword>location</keyword>
-      <keyword>month</keyword>
-      <keyword>note</keyword>
-      <keyword>number</keyword>
-      <keyword>numpages</keyword>
-      <keyword>organization</keyword>
-      <keyword>pages</keyword>
-      <keyword>publisher</keyword>
-      <keyword>school</keyword>
-      <keyword>series</keyword>
-      <keyword>subtitle</keyword>
       <keyword>title</keyword>
-      <keyword>type</keyword>
+      <keyword>journaltitle</keyword>
+      <keyword>date</keyword>
+      <keyword>translator</keyword>
+      <keyword>annotator</keyword>
+      <keyword>commentator</keyword>
+      <keyword>subtitle</keyword>
+      <keyword>titleaddon</keyword>
+      <keyword>editor</keyword>
+      <keyword>editora</keyword>
+      <keyword>editorb</keyword>
+      <keyword>editorc</keyword>
+      <keyword>journalsubtitle</keyword>
+      <keyword>issuetitle</keyword>
+      <keyword>issuesubtitle</keyword>
+      <keyword>language</keyword>
+      <keyword>origlanguage</keyword>
+      <keyword>series</keyword>
+      <keyword>volume</keyword>
+      <keyword>number</keyword>
+      <keyword>eid</keyword>
+      <keyword>issue</keyword>
+      <keyword>month</keyword>
+      <keyword>pages</keyword>
+      <keyword>version</keyword>
+      <keyword>note</keyword>
+      <keyword>issn</keyword>
+      <keyword>addendum</keyword>
+      <keyword>pubstate</keyword>
+      <keyword>doi</keyword>
+      <keyword>eprint</keyword>
+      <keyword>eprintclass</keyword>
+      <keyword>eprinttype</keyword>
       <keyword>url</keyword>
       <keyword>urldate</keyword>
-      <keyword>volume</keyword>
+      <keyword>introduction</keyword>
+      <keyword>foreword</keyword>
+      <keyword>afterword</keyword>
+      <keyword>maintitle</keyword>
+      <keyword>mainsubtitle</keyword>
+      <keyword>maintitleaddon</keyword>
+      <keyword>part</keyword>
+      <keyword>edition</keyword>
+      <keyword>volumes</keyword>
+      <keyword>publisher</keyword>
+      <keyword>location</keyword>
+      <keyword>isbn</keyword>
+      <keyword>chapter</keyword>
+      <keyword>pagetotal</keyword>
+      <keyword>booktitle</keyword>
+      <keyword>bookauthor</keyword>
+      <keyword>booksubtitle</keyword>
+      <keyword>booktitleaddon</keyword>
+      <keyword>author/editor</keyword>
+      <keyword>howpublished</keyword>
+      <keyword>type</keyword>
+      <keyword>organization</keyword>
       <keyword>year</keyword>
+      <keyword>holder</keyword>
+      <keyword>eventtitle</keyword>
+      <keyword>eventdate</keyword>
+      <keyword>venue</keyword>
+      <keyword>institution</keyword>
+      <keyword>isrn</keyword>
     </context>
 
     <context id="string" class-disabled="no-spell-check">
